--- a/style/style.css
+++ b/style/style.css
@@ -200,3 +200,34 @@ footer {
 	padding: 8px;
     border-bottom: 1px solid; 
 }
+
+/*  Editing Files 
+    ===================
+    Floating Div
+    ----------------
+*/
+
+.floatFile{
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #2c3e50;
+    color: white;
+    border-radius: 5%;
+    width: 50%;
+    height: 50%;
+
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+/*  Floating Div の　テーブル
+    ----------------*/
+
+.flTable{
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 10px;
+
+}
