--- a/style/style.css
+++ b/style/style.css
@@ -59,6 +59,7 @@ nav a {
 .subnav{
     float: left;
     overflow: hidden;
+    height: 100%;
 }
 .subnav .subnavBtn{
     font-size: 15px;
@@ -82,12 +83,16 @@ nav a {
     background-color: #2c3e50;
     width: 100%;
     z-index: 1;
+    font-size: large;
 }
 
 .subnav-content a {
     float: left;
     color: white;
     text-decoration: none;
+    font-size: large;
+    height: 50px;
+    margin: auto;
   }
   
 .subnav-content a:hover {
@@ -176,6 +181,11 @@ footer {
 	padding: 15px 32px;
 	cursor: pointer;
 }
+#addFileDiv input[type="submit"], 
+#addFileDiv	input[type="reset"]{
+	padding: 15px 32px;
+	cursor: pointer;
+}
 
 #fileStorageDiv select{
 	padding: 5px;
@@ -201,33 +211,197 @@ footer {
     border-bottom: 1px solid; 
 }
 
+#fileTable tr:hover{
+    background-color: bisque;
+
+}
+
 /*  Editing Files 
     ===================
     Floating Div
     ----------------
 */
 
-.floatFile{
+#floatFile{
     position: absolute;
+    display: flex;
     top:50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #2c3e50;
     color: white;
     border-radius: 5%;
-    width: 50%;
-    height: 50%;
-
+    width: 70%;
+    margin-top: 40px;
+    height: 70%;
     align-items: center;
-    display: flex;
     justify-content: center;
 }
 /*  Floating Div の　テーブル
     ----------------*/
 
-.flTable{
-    border-collapse: collapse;
-    width: 100%;
-    margin-top: 10px;
+.flTable, .flTable tr, .flTable td{
+    margin: auto;
 
+
+
+}
+.flTable{
+    width: 90%;
+    margin-bottom: 50px;
+    height: 90%;
+}
+
+.flTable textarea{
+    background-color: #7f8c8d;
+    color: white;
+    font-size: large;
+}
+
+.flTable td {
+
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+
+.icon{
+    width: 50px;
+    height: 50px;
+}
+
+.addBtnDiv{
+    position: absolute;
+    right: 10px;
+    margin-top: 20px;
+}
+
+.addBtnTooltip {
+    visibility: hidden;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    right: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.addBtnDiv:hover .addBtnTooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
+#addFileDiv{
+    display: none;
+    width: 50%;
+    height: 50%;
+    background-color: #7f8c8d;
+    position: absolute;
+    left: 20%;
+    top: 25%;
+    transform: translate(-50%,-50%);
+    transition: opacity 0.3s ease-in-out;
+    animation: openAnimation 1s ease 0s 1 normal forwards;
+
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.closeButton{
+    font-size: larger;
+    color: black;
+    position: absolute;
+    right: 0%;
+    bottom: 90%;
+
+}
+.closeButton:hover{
+    color: white;
+}
+/**/
+/* = Upload Div  = */
+#uploadTable{
+    width: 100%;
+    margin: auto;
+    border:#f8f8f8;
+}
+#uploadTable td{
+    text-align: right;
+}
+/*===== File Upload Button hiasan*/
+input[type=file] {
+    width: 350px;
+    max-width: 100%;
+    color: #444;
+    padding: 5px;
+    background: #8cc3f6;
+    border-radius: 10px;
+    border: 1px solid #000000;
+  }
+
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #084cdf;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+  }
+  
+  input[type=file]::file-selector-button:hover {
+    background: #0d45a5;
+  }
+
+  .drop-container {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px dashed #555;
+    color: #444;
+    cursor: pointer;
+    transition: background .2s ease-in-out, border .2s ease-in-out;
+  }
+  
+  .drop-container:hover {
+    background: #eee;
+    border-color: #111;
+  }
+  
+  .drop-container:hover .drop-title {
+    color: #222;
+  }
+  
+  .drop-title {
+    color: #444;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    transition: color .2s ease-in-out;
+  }
+
+/*==============animations*/
+
+@keyframes openAnimation {
+    
+    0%{
+        transform: scaleX(0);
+    }
+
+    100%{ 
+        transform: scale(1);
+    }
+    
 }
