--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,15 @@ header {
     text-align: center;
     padding: 16px 0; 
 }
+.image {
+	width: 50%;
+	height: auto;
+	text-align: center;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
 header h1 {
     margin: 0;
@@ -216,6 +225,131 @@ footer {
 
 }
 
+.noResize{
+    resize: none;
+}
+
+/*========Room Table ================*/
+#roomTable {
+    border: 1px solid #000000;
+    width: 100%;
+}
+#roomTable th {
+    border: 1px solid #000000;
+}
+
+
+/*================ News Page ====================*/
+.col-news {
+	flex: 70%; 
+	padding: 15px;
+}
+#newsPageAnn{
+	font-family: 'Helvetica', 'Arial', sans-serif;
+	overflow: auto;
+	height: 200px;
+    width: 100%;
+	background-color: #e5f0f0;
+}
+#newsPageNews{
+	font-family: 'Helvetica', 'Arial', sans-serif;
+	overflow: auto;
+	height: 500px;
+    width: 100%;
+	background-color: #e5f0f0;
+	margin-top: 10px;
+}
+
+#newsTable{
+	width: 100%;
+}
+#newsTable td{
+	border-bottom: 1px solid;
+}
+#newsTable tr:nth-child(odd) td {
+    border-bottom: none; 
+	font-size: large;
+	font-weight: bold;
+}
+#newsTable td img#newsImg {
+    width: 20%;
+    height: 20%;
+    max-width: 100%;
+    max-height: 100%;
+	margin: 0 auto;
+	display: block;
+}
+
+
+/*Add MEws DIv*/
+#addNewsDiv {
+	display: block;
+}
+
+#addNewsDiv table{	
+	border-collapse: collapse;
+	width: 80%;
+	padding-left: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#addNewsDiv input[type="submit"], input[type="reset"], input[type="button"]{
+	padding: 15px 32px;
+	cursor: pointer;
+}
+
+#addNewsDiv select{
+	padding: 5px;
+}
+
+#addNewsDiv input[type="text"]{
+	padding: 5px;
+}	
+
+#addNewsDiv textarea{
+	width:95%;
+	padding: 5px;
+}
+
+#addNewsDiv td, #addNewsDiv th {
+	border: 1px solid #616161;
+	padding: 8px;
+}
+
+/*Add Add ROOM */
+#addRoomTable {
+    border-collapse: collapse;
+    margin: auto;
+    background-color: #ecf0f1; 
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+/*Page to have left and right divs*/
+.row {
+	display: flex;
+	flex-wrap: wrap; /* Allow wrapping on smaller screens */
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.col-left {	
+	text-align: center; 
+	flex: 30%;
+	padding: 15px;
+}
+.col-right {	
+	flex: 60%; 
+	padding: 15px;
+}
+
 /*  Editing Files 
     ===================
     Floating Div
@@ -390,7 +524,66 @@ input[type=file]::file-selector-button {
     font-weight: bold;
     text-align: center;
     transition: color .2s ease-in-out;
+    
   }
+
+  /* Profile Sections */
+ 
+
+  #BorrowedhistorySection{
+    display: none;
+  }
+
+  #reviewSection{
+    display: none;
+  }
+
+  #printOrderSection{
+    display: none;
+  }
+
+  .profile-section{
+    margin-top: 10%;
+    border:#000000 1px solid;
+    height: 100%;
+  }
+
+  /* ====================== */
+
+  /* rservertaion */
+#roomResTable{
+    margin: 0 auto;
+    width:  90%;
+    text-align: center;
+}
+#roomResTable tr,td{
+    height: 40px;
+}
+
+#ntahkalikeberapasdhni{
+    height: 100px;
+}
+
+/* asdsadsadadsad */
+
+#revEditTable{
+    width: 100%;
+    margin-top: 50px;
+}
+#revEditTable textarea{
+    width: 90%;
+}   
+
+#biggerDiv{
+    width: 90%;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+}
+
+
+
+  /* ============= */
 
 /*==============animations*/
 
